--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "daisyui": "^5.0.37",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-typed": "^2.0.12",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
