--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
+    "@vercel/analytics": "^1.5.0",
     "daisyui": "^5.0.37",
     "gh-pages": "^6.3.0",
     "react": "^19.1.0",
